SHELL_DIGEST = ENV['SHELL_DIGEST'] || 'digests/shell-srtool-digest.json'
WESTMINT_DIGEST = ENV['WESTMINT_DIGEST'] || 'digests/westmint-srtool-digest.json'
STATEMINE_DIGEST = ENV['STATEMINE_DIGEST'] || 'digests/statemine-srtool-digest.json'
STATEMINT_DIGEST = ENV['STATEMINT_DIGEST'] || 'digests/statemint-srtool-digest.json'
ROCOCO_PARA_DIGEST = ENV['ROCOCO_PARA_DIGEST'] || 'digests/rococo-parachain-srtool-digest.json'
CANVAS_KUSAMA_DIGEST = ENV['CANVAS_KUSAMA_DIGEST'] || 'digests/contracts-rococo-srtool-digest.json'

logger.debug("Release type: #{ENV['RELEASE_TYPE']}")

if ENV['RELEASE_TYPE'] && ENV['RELEASE_TYPE'] == 'client'
  logger.debug("Building changelog without runtimes")
  cmd = format('jq \
    --slurpfile cumulus %s \
    --slurpfile substrate %s \
    --slurpfile polkadot %s \
    -n \'{
            cumulus: $cumulus[0],
            substrate: $substrate[0],
            polkadot: $polkadot[0],
          }\' > context.json', cumulus_data, substrate_data, polkadot_data,
  )
else
  logger.debug("Building changelog with runtimes")

  # Here we compose all the pieces together into one
  # single big json file.
  cmd = format('jq \
      --slurpfile cumulus %s \
      --slurpfile substrate %s \
      --slurpfile polkadot %s \
      --slurpfile srtool_shell %s \
      --slurpfile srtool_westmint %s \
      --slurpfile srtool_statemine %s \
      --slurpfile srtool_statemint %s \
      --slurpfile srtool_rococo_parachain %s \
      --slurpfile srtool_contracts_rococo %s \
      --slurpfile srtool_polkadot_collectives %s \
      -n \'{
            cumulus: $cumulus[0],
            substrate: $substrate[0],
            polkadot: $polkadot[0],
          srtool: [
            { name: "shell", data: $srtool_shell[0] },
            { name: "westmint", data: $srtool_westmint[0] },
            { name: "statemine", data: $srtool_statemine[0] },
            { name: "statemint", data: $srtool_statemint[0] },